Fix slider on smaller screens

--- a/style.css
+++ b/style.css
@@ -1,16 +1,17 @@
-      .slidecontainer {
-  width: 100%;
+.slidecontainer {
+  width: 90vw;
+  max-width: 1200px;
+  margin: 0 auto;
 }
 
 .slider {
   -webkit-appearance: none;
-  width: 200%;
+  width: 100%;
   height: 15px;
   border-radius: 5px;
   background: #d3d3d3;
   outline: none;
   opacity: 0.7;
-  -webkit-transition: .2s;
   transition: opacity .2s;
 }
 
